# orbis

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: build.yml  release.yml
assets/data/: test_cities.geojson
assets/geojson/: nuclear_power_plants.geojson  submarine_cables.geojson  tectonic_plates.geojson
assets/lang/: ar.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  hi.json  hu.json  id.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sv.json  tr.json  uk.json  vi.json  zh.json  zh_tw.json
assets/shaders/: basic.wgsl  globe.wgsl  line.wgsl  map.wgsl  marker.wgsl  overlay.wgsl  polygon.wgsl  stars.wgsl
docs/: csv-import.md  gpx-import.md  projection-honesty.md  xyz-tiles.md
scripts/: package.ps1  package.sh
src/: app.rs  camera.rs  crs.rs  custom_source.rs  download.rs  geojson.rs  gibs.rs  gpu_init.rs  gui.rs  gui_requests.rs  i18n.rs  label.rs  layer.rs  line.rs  live_source.rs  main.rs  marker.rs  mesh.rs  overlay_project.rs  planets.rs  polygon.rs  provider.rs  satellite.rs  settings.rs  sun.rs  texture.rs  tile.rs  wms.rs  wms_caps.rs
src/csv_import/: columns.rs  mod.rs
src/gpx_import/: mod.rs
src/gui/: custom.rs  geojson_panel.rs  labels.rs  legend.rs  live.rs  mod.rs  panels.rs  satellites.rs  scale.rs  settings.rs  state.rs  time.rs
src/shp/: mod.rs  projection.rs
src/tile/: cache.rs  compositor.rs  coord.rs  fetcher.rs  manager.rs  mod.rs  source.rs  worker.rs  zoom.rs
src/wms/: behavior.rs  capabilities.rs  crs.rs  mod.rs  probe.rs  (+1 more)
